--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "get title from markdown article",
   "main": "index.es5.js",
   "scripts": {
-    "coverage": "istanbul cover _mocha index.js -- --require babel/register",
+    "coverage": "isparta cover _mocha index.js -- --require babel/register",
     "precoveralls": "npm run coverage",
     "coveralls": "coveralls < coverage/lcov.info",
     "test": "mocha --require babel/register",
@@ -34,7 +34,7 @@
     "babel": "*",
     "coveralls": "*",
     "assert": "*",
-    "istanbul": "*",
+    "isparta": "*",
     "mocha": "*"
   }
 }
