add forgotten deps

--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
     "assert": "*",
     "isparta": "*",
     "mocha": "*"
+  },
+  "dependencies": {
+    "commonmark-helpers": "^0.4.0",
+    "ramda": "^0.17.1",
+    "trim-html-tag": "^1.0.3"
   }
 }
